--- a/src/components/MainPage/style.module.css
+++ b/src/components/MainPage/style.module.css
@@ -5,3 +5,31 @@ body {
   width: 100%;
   margin: 0;
 }
+
+.container_main {
+  display: flex;
+  flex-direction: column;
+  background: url("../../images/image-welcome.png");
+  width: 100%;
+  padding-bottom: 160px;
+}
+
+.welcome_box {
+  margin-top: 220px;
+  padding: 35px 40px;
+  width: 520px;
+  height: 150px;
+  background-color: rgb(0, 0, 0);
+}
+
+.welcome_text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  text-align: center;
+  font-size: 40px;
+  line-height: 50px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
