--- a/src/components/MainPage/style.module.css
+++ b/src/components/MainPage/style.module.css
@@ -33,3 +33,33 @@ body {
   letter-spacing: 3px;
   text-transform: uppercase;
 }
+
+.container_about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.about_title {
+  margin: 20px 0;
+  color: #0c0c0e;
+  font-size: 40px;
+  line-height: 40px;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+}
+
+.about_line {
+  width: 50px;
+  height: 1px;
+  flex-shrink: 0;
+  background: #0c0c0e;
+}
+
+.about_text {
+  margin: 40px 0 20px;
+  color: #000;
+  text-align: center;
+  font-size: 20px;
+  line-height: 40px;
+}
