--- a/src/components/MainPage/style.module.css
+++ b/src/components/MainPage/style.module.css
@@ -2,11 +2,18 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 100%;
+  box-sizing: border-box;
   margin: 0;
 }
 
 .container_main {
+  width: 1440px;
+  box-sizing: border-box;
+}
+
+.container_welcome {
   display: flex;
   flex-direction: column;
   background: url("../../images/image-welcome.png");
@@ -62,4 +69,14 @@ body {
   text-align: center;
   font-size: 20px;
   line-height: 40px;
+}
+
+.favorite_books {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.favorite_book {
+  width: 50%;
 }
