Add favorites to MainPage

--- a/src/components/MainPage/style.module.css
+++ b/src/components/MainPage/style.module.css
@@ -70,3 +70,35 @@ body {
   font-size: 20px;
   line-height: 40px;
 }
+
+.container_favorites {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 20px;
+}
+
+.favorites_title {
+  margin: 20px 0;
+  color: #0c0c0e;
+  font-size: 40px;
+  line-height: 40px;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+}
+
+.favorites_line {
+  width: 50px;
+  height: 1px;
+  flex-shrink: 0;
+  background: #0c0c0e;
+}
+
+.favorites_text {
+  margin: 40px 0;
+  color: #000;
+  font-size: 20px;
+  line-height: normal;
+  font-weight: bold;
+}
