--- a/src/components/FavoriteBook/style.module.css
+++ b/src/components/FavoriteBook/style.module.css
@@ -8,7 +8,7 @@
   background: #fff;
   box-sizing: border-box;
   padding-left: 20px;
-  margin: 0 60px 40px 20px;
+  margin: 0 40px 40px 0;
 }
 
 .container_book {
