--- a/src/components/FavoriteBook/style.module.css
+++ b/src/components/FavoriteBook/style.module.css
@@ -36,7 +36,7 @@
   color: #000;
   font-size: 15px;
   line-height: 40px;
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -79,4 +79,5 @@
   display: flex;
   align-items: end;
   margin-right: -40px;
+  margin-bottom: -1.2px;
 }
