--- a/src/components/MainPage/style.module.css
+++ b/src/components/MainPage/style.module.css
@@ -103,3 +103,47 @@ body {
   line-height: normal;
   font-weight: bold;
 }
+
+.container_shop {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 20px 40px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.shop_title {
+  margin-bottom: 20px;
+  color: #0c0c0e;
+  font-size: 40px;
+  line-height: 40px;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+}
+
+.shop_line {
+  width: 50px;
+  height: 1px;
+  flex-shrink: 0;
+  background: #000;
+}
+
+.shop_text {
+  margin: 40px 0;
+  padding: 0 50px;
+  color: #000;
+  text-align: center;
+  font-size: 20px;
+  line-height: 40px;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+}
+
+.shop_menu {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 480px;
+}
