--- a/src/components/CoffeeShop/style.module.css
+++ b/src/components/CoffeeShop/style.module.css
@@ -28,6 +28,13 @@
   text-transform: capitalize;
 }
 
+.line_price_box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 60px;
+}
+
 .line {
   width: 100px;
   height: 1px;
