--- a/src/components/MainPage/style.module.css
+++ b/src/components/MainPage/style.module.css
@@ -115,6 +115,7 @@ body {
 }
 
 .shop_title {
+  font-family: "Forum";
   margin-bottom: 20px;
   color: #0c0c0e;
   font-size: 40px;
@@ -146,4 +147,73 @@ body {
   display: flex;
   flex-direction: row;
   gap: 480px;
+}
+
+.container_contacts {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 20px 40px;
+  box-sizing: border-box;
+}
+
+.contacts_title {
+  margin-bottom: 20px;
+  color: #0c0c0e;
+  text-align: center;
+  font-size: 40px;
+  line-height: 40px;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+}
+
+.contacts_line {
+  width: 50px;
+  height: 1px;
+  flex-shrink: 0;
+  background: #000;
+}
+
+.contacts_box {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+
+.contacts_info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  color: #000;
+  text-align: center;
+  font-size: 20px;
+  line-height: 40px;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+}
+
+.contacts_info_text_one {
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.contacts_info_phone {
+  text-decoration: none;
+  color: #000;
+}
+
+.contacts_info_phone:hover {
+  color: #bb945f;
+}
+
+.contacts_info_text_two {
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.contacts_map {
 }
