--- a/src/components/CoffeeShop/style.module.css
+++ b/src/components/CoffeeShop/style.module.css
@@ -7,6 +7,7 @@
 
 .title {
   color: #bb945f;
+  font-family: Forum;
   font-size: 40px;
   line-height: 40px;
   letter-spacing: 2px;
@@ -22,6 +23,7 @@
 
 .product {
   color: #000;
+  font-family: Inter;
   font-size: 20px;
   line-height: 40px;
   letter-spacing: 2px;
@@ -43,6 +45,7 @@
 
 .price {
   color: #000;
+  font-family: Forum;
   font-size: 20px;
   line-height: 40px;
   letter-spacing: 2px;
