--- a/src/components/FavoriteBook/style.module.css
+++ b/src/components/FavoriteBook/style.module.css
@@ -19,6 +19,7 @@
 .staff {
   margin-top: 15px;
   color: #000;
+  font-family: Forum;
   font-size: 20px;
   line-height: 40px;
   letter-spacing: 2px;
@@ -34,25 +35,28 @@
 
 .name_book {
   color: #000;
+  font-family: Inter;
   font-size: 15px;
+  font-weight: 700;
   line-height: 40px;
-  letter-spacing: 1.5px;
+  letter-spacing: 1.8px;
   text-transform: uppercase;
-  font-weight: bold;
 }
 
 .writer {
   margin-bottom: 20px;
   color: #000;
+  font-family: Inter;
   font-size: 15px;
+  font-weight: 700;
   line-height: 40px;
   letter-spacing: 2px;
   text-transform: capitalize;
-  font-weight: bold;
 }
 
 .description_book {
   color: #000;
+  font-family: Inter;
   font-size: 15px;
   line-height: 40px;
   letter-spacing: 2px;
@@ -66,13 +70,13 @@
   border-radius: 2px;
   border: 1px solid #0c0c0e;
   background-color: #fff;
+  margin-bottom: 15px;
   color: #0c0c0e;
   text-align: center;
+  font-family: Inter;
   font-size: 10px;
-  line-height: normal;
+  font-weight: 700;
   letter-spacing: 1px;
-  font-weight: bold;
-  margin-bottom: 15px;
 }
 
 .image_box {
