Add digital library cards part to MainPage

--- a/src/components/MainPage/style.module.css
+++ b/src/components/MainPage/style.module.css
@@ -210,3 +210,102 @@ body {
   font-weight: 700;
   margin-top: 20px;
 }
+
+.container_labrary_cards {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px 20px 40px;
+}
+
+.labrary_cards_title {
+  margin-bottom: 20px;
+  color: #0c0c0e;
+  text-align: center;
+  font-family: Forum;
+  font-size: 40px;
+  line-height: 40px;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+}
+
+.labrary_cards_line {
+  width: 50px;
+  height: 1px;
+  flex-shrink: 0;
+  background: #000;
+}
+
+.find_get_box {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 40px;
+  gap: 344px;
+}
+
+.find_box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.find_title {
+  margin-bottom: 30px;
+  color: #000;
+  font-family: Inter;
+  font-size: 30px;
+  letter-spacing: 0.6px;
+}
+
+.get_box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.get_title {
+  color: #000;
+  text-align: center;
+  font-family: Forum;
+  font-size: 30px;
+  letter-spacing: 0.6px;
+}
+
+.get_text {
+  margin: 35px 0;
+  color: #000;
+  text-align: right;
+  font-family: Inter;
+  font-size: 20px;
+  line-height: 40px;
+  letter-spacing: 0.4px;
+}
+
+.buttons_box {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.get_button {
+  border-radius: 2px;
+  border: 1px solid #0c0c0e;
+  width: 75px;
+  height: 30px;
+  background: #fff;
+  cursor: pointer;
+  color: #0c0c0e;
+  text-align: center;
+  font-family: Inter;
+  font-size: 10px;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
+.get_button:hover {
+  background: #bb945f;
+  transition: all ease 0.9s;
+}
