--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -1,3 +1,7 @@
+.container_main {
+  position: relative;
+}
+
 .container {
   width: 100%;
   padding: 20px 20px;
@@ -27,7 +31,7 @@
   color: #fff;
   font-family: Inter;
   font-size: 20px;
-  line-height: 50px; /* 250% */
+  line-height: 50px;
 }
 
 .pages_text:hover {
@@ -38,4 +42,44 @@
 .icon_profile {
   width: 28px;
   height: 28px;
+}
+
+.dropMenu_no {
+  display: none;
+}
+
+.dropMenu_no_active {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80px;
+  position: absolute;
+  right: 1.4%;
+  top: 67%;
+  padding-top: 5px;
+  background: #fff;
+  color: #000;
+  font-family: Inter;
+  font-size: 15px;
+  line-height: 20px;
+}
+
+.dropMenu_no_line {
+  width: 40px;
+  height: 1px;
+  background: #bb945f;
+  margin: 5px 0 15px;
+}
+
+.dropMenu_no_title {
+  font-weight: 700;
+}
+
+.dropMenu_no_log_in {
+  cursor: pointer;
+}
+
+.dropMenu_no_register {
+  margin: 10px 0 20px;
+  cursor: pointer;
 }
