--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -42,6 +42,7 @@
 .icon_profile {
   width: 28px;
   height: 28px;
+  cursor: pointer;
 }
 
 .dropMenu_no {
@@ -80,6 +81,14 @@
 }
 
 .dropMenu_no_register {
+  color: #000;
+  font-family: Inter;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 133.333% */
+  border: 0;
+  background: #fff;
   margin: 10px 0 20px;
   cursor: pointer;
 }
