--- a/src/components/MainPage/style.module.css
+++ b/src/components/MainPage/style.module.css
@@ -4,7 +4,6 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  box-sizing: border-box;
   margin: 0;
 }
 
@@ -12,6 +11,28 @@ body {
   width: 1440px;
   box-sizing: border-box;
 }
+
+/* Modal */
+
+.modal_register {
+  z-index: 99;
+  top: 0;
+  left: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: rgba(41, 41, 41, 0.7);
+}
+
+.hidden {
+  display: none;
+}
+
+/* End Modal */
 
 .container_welcome {
   display: flex;
