--- a/src/components/ModalLogIn/style.module.css
+++ b/src/components/ModalLogIn/style.module.css
@@ -54,7 +54,6 @@
   align-items: flex-start;
   gap: 10px;
   color: #000;
-  text-align: center;
   font-family: Inter;
   font-size: 15px;
   line-height: 20px;
@@ -68,6 +67,10 @@
   padding-left: 5px;
   cursor: pointer;
   box-sizing: border-box;
+}
+
+.error_input {
+  border: 1px solid #d35555;
 }
 
 .register_button {
