--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -45,6 +45,18 @@
   cursor: pointer;
 }
 
+.icon_profile_active {
+  width: 32px;
+  height: 32px;
+  border: 0;
+  border-radius: 50%;
+
+  color: #bb945f;
+  font-family: Inter;
+  font-size: 15px;
+  line-height: 20px;
+}
+
 .dropMenu_no {
   display: none;
 }
