--- a/src/components/ModalProfile/style.module.css
+++ b/src/components/ModalProfile/style.module.css
@@ -8,9 +8,11 @@
   width: 600px;
   height: 400px;
   box-sizing: border-box;
+  background: #fff;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
+
   position: relative;
 }
 
