--- a/src/components/ModalProfile/style.module.css
+++ b/src/components/ModalProfile/style.module.css
@@ -125,7 +125,7 @@
 }
 
 .title_info {
-  margin: 20px 0 30px;
+  margin: 20px 0 15px;
   color: #0c0c0e;
   text-align: center;
   font-family: Inter;
@@ -141,12 +141,15 @@
   line-height: 20px;
   letter-spacing: 2px;
   text-transform: capitalize;
+  height: 120px;
+  box-sizing: border-box;
+  overflow-y: scroll;
 }
 
 .card_box {
   display: flex;
   flex-direction: row;
-  margin-top: 40px;
+  margin-top: 20px;
   gap: 10px;
 }
 
