--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -14,6 +14,7 @@
 }
 
 .title_text {
+  text-decoration: none;
   font-family: Forum;
   color: #fff;
   font-size: 30px;
@@ -32,6 +33,11 @@
   font-family: Inter;
   font-size: 20px;
   line-height: 50px;
+}
+
+.pages_text {
+  text-decoration: none;
+  color: #fff;
 }
 
 .pages_text:hover {
