--- a/src/components/LibraryCard/style.module.css
+++ b/src/components/LibraryCard/style.module.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 16px;
   width: 600px;
   flex-shrink: 0;
   border: 3px solid #bb945f;
   background: #fff;
-  padding: 20px 20px 30px;
+  padding: 20px 20px 16px;
   box-sizing: border-box;
 }
 
@@ -46,6 +46,7 @@
 }
 
 .check_button {
+  margin: 4px 0 14px;
   padding: 10px 40px;
   border-radius: 2px;
   border: 1px solid #0c0c0e;
@@ -62,4 +63,16 @@
 .check_button:hover {
   background: #bb945f;
   transition: all ease 0.9s;
+}
+
+.icon_title {
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 200% */
+  letter-spacing: 0.2px;
+  text-transform: capitalize;
 }
